@@ -1,3 +1,8 @@
+* 2014-11-05 - thorben.betten@open-xchange.com
+
+ - Fix for bug 35139: Allow "data" URI scheme in <img> src attribute
+ - Fix for bug 35348: Drop weird attributes from start tags that break HTML parsing and added <center> tag to white-list
+
 * 2014-11-03 - thorben.betten@open-xchange.com
 
  - Fix for bug 35291: Obey forbidden end tags when generating conform/well-formed HTML content
